--- a/birthday-card/package.json
+++ b/birthday-card/package.json
@@ -10,7 +10,11 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "@prisma/client": "^5.13.0",
+    "auto-text-size": "^0.2.3",
+    "canvas": "^2.11.2",
+    "d3-cloud": "^1.2.7",
     "framer-motion": "^11.0.28",
     "next": "14.2.1",
     "react": "^18",
